--- a/app/index.html
+++ b/app/index.html
@@ -59,7 +59,7 @@
                 <tr>
                   <td class="col-lg-6 item" data-bind="text: $data.attributes.stuff"></td>
                   <td class="col-lg-2 count" data-bind="text: $data.attributes.count"></td>
-                  <td class="col-lg-3 date" data-bind="text: $data.attributes.dateDiscarded.toDateString(), afterRender: $parent.sleep(2000)"></td>
+                  <td class="col-lg-3 date" data-bind="text: $data.attributes.dateDiscarded.toDateString()"></td>
                 </tr>
               </tbody>
             </table>
@@ -87,6 +87,7 @@
     <!-- build:js scripts/vendor.js -->
     <!-- bower:js -->
     <script src="../bower_components/jquery/dist/jquery.js"></script>
+    <script src="../bower_components/parse/parse.min.js"></script>
     <script src="../bower_components/knockout/dist/knockout.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
