--- a/app/index.html
+++ b/app/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1, minimal-ui">
-    <title>1047 things</title>
+    <title>Tame Your Clutter</title>
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 
     <!-- build:css styles/vendor.css -->
@@ -67,7 +67,7 @@
         </div>
 
       <div class="footer">
-        <p>©2015 2047 Things</p>
+        <p>©2015 Tame Your Clutter</p>
         <!-- <button type="submit" data-bind="text: (self.getCount() == 781) ? 'Create' : 'Update'"></button> -->
       </div>
 
