--- a/app/index.html
+++ b/app/index.html
@@ -61,11 +61,16 @@
                   </td>
                 </tr>
               </thead>
-              <th colspan="3" style="text-align:center" data-bind="text: total"></th>
+              <tr>
+                <th colspan="3" style="text-align:center" data-bind="text: total"></th>
+              </tr>
+              <tr>
+                <th class="subhead" colspan="3" style="text-align:center" data-bind="text: remaining + ' items remaining'"></th>
+              </tr>
               <tbody data-bind="foreach: { data : things}">
                 <tr>
                   <td class="col-xs-5 col-sm-8 item"  data-bind="text: $data.attributes.stuff"></td>
-                  <td class="col-xs-1 col-sm-1 number" data-bind="text: $data.attributes.count"></td>
+                  <td class="col-xs-1 col-sm-1 number"  data-bind="text: $data.attributes.count"></td>
                   <td class="col-xs-6 col-sm-3 date text-right" data-bind="text: $parent.formatDate($data.attributes.dateDiscarded)"></td>
                 </tr>
               </tbody>
@@ -220,6 +225,19 @@ function ThingsViewModel(name, things) {
     return total;
   };
 
+  // self.getLiveTotal = function() {
+  //   var numbers = $('td.number');
+  //   sum = 0;
+  //   $.each(numbers, function (index, number) {
+  //     sum += parseInt($(number).html());
+  //   })
+  //   return sum;
+  // }
+  //
+  // self.liveTotal = self.getLiveTotal();
+
+
+
   self.formatDate = function(date) {
     var month = ('0' + (date.getMonth() +1)).toString().slice(-2);
     var dayOfMonth = ('0' + date.getDate()).toString().slice(-2);
@@ -228,6 +246,13 @@ function ThingsViewModel(name, things) {
   };
 
   self.total = self.getTotal();
+
+  self.getRemaining = function() {
+    return (1000 - self.total);
+  }
+
+  self.remaining = self.getRemaining();
+
 
 
 
@@ -273,8 +298,8 @@ function ThingsViewModel(name, things) {
   stuff.fetch({
     success: function(stuff) {
 
-      var thingsViewModel = new ThingsViewModel('January 2015 Stuff', stuff.models);
-
+      // var thingsViewModel = new ThingsViewModel('January 2015 Stuff', stuff.models);
+      thingsViewModel = new ThingsViewModel('January 2015 Stuff', stuff.models); // have available CLI
       ko.applyBindings(thingsViewModel);
     },
     error: function(stuff, error) {
