Hid the jumbotron

--- a/app/index.html
+++ b/app/index.html
@@ -42,11 +42,11 @@
         <h3 class="text-muted">Tame Your Clutter</h3>
       </div>
 
-      <div class="jumbotron">
+      <!-- <div class="jumbotron">
         <h1>Tame Your Clutter</h1>
         <!-- <p class="lead">Your current count is <span data-bind="text: (self.getCount() != undefined) ? self.getCount() : 0, style: { color : (self.getCount() > 500) ? 'red' : 'blue'}">.</p> -->
-        <p><a class="btn btn-lg btn-start" href="#">Start Now</a></p>
-      </div>
+        <!-- <p><a class="btn btn-lg btn-start" href="#">Start Now</a></p> -->
+      <!-- </div> --> 
 
 
 
