--- a/app/index.html
+++ b/app/index.html
@@ -66,7 +66,9 @@
                 <th colspan="3" class="text-center" data-bind="text: total"></th>
               </tr>
               <tr>
-                <th class="subhead" colspan="3" style="text-align:center" data-bind="text: remaining + ' items remaining'"></th>
+                <th class="subhead" colspan="3" style="text-align:center">
+                  <span data-bind="text: remaining"></span><span> items remaining</span>
+                </th>
               </tr>
               <tbody data-bind="foreach: { data : things}">
                 <tr data-bind="attr: { 'data-thing-id':  $data.id }">
